# 42_n-puzzle

./: CMakeLists.txt  Makefile  README.md  author
includes/: algorithms.h  argparse.h  closedStack.h  inputParser.cpp  inputParser.h  nodes.h  openStack.h  shuffler.h  stack.h  state.h  stateHamming.h  stateLinearConflict.h  stateManhattanDistance.h  stateShuffler.h  stateUniformCost.h
includes/ui/: mainWindow.h  puzzleWidget.h
srcs/: algorithms.cpp  argparse.cpp  closedStack.cpp  closedStack.h  inputParser.cpp  main.cpp  nodes.h  openStack.cpp  openStack.h  shuffler.cpp  stack.cpp  state.cpp  state.h  stateHamming.cpp  stateLinearConflict.cpp  stateManhattanDistance.cpp  stateManhattanDistance.h  stateShuffler.cpp  stateUniformCost.cpp  test_manhattanDistance.cpp  test_manhattanDistance.h
srcs/ui/: puzzleWidget.cpp
test/: hardest3.txt  puzzle.txt  test4.txt
